# DragncardsAI

./: .gitmodules  README.md  docker-compose.yaml  opencode.jsonc
docker/: docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/game-service/: Dockerfile
docker/mc-plugin/: Dockerfile
docker/scripts/: backend-entrypoint.sh  frontend-entrypoint.sh
openspec/: config.yaml
openspec/changes/archive/2026-04-11-expand-dragncards-api-coverage/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-11-expand-dragncards-api-coverage/specs/game-service/: spec.md
openspec/changes/archive/2026-04-11-expand-dragncards-api-coverage/specs/room-control/: spec.md
openspec/changes/archive/2026-04-11-expand-dragncards-api-coverage/specs/room-events/: spec.md
openspec/changes/archive/2026-04-11-game-service-and-mcp/: proposal.md  tasks.md
openspec/changes/archive/2026-04-11-game-service-and-mcp/specs/game-service/: spec.md
openspec/changes/game-service-and-mcp/: design.md  tasks.md
openspec/specs/dragncards/: spec.md
openspec/specs/game-service/: spec.md
openspec/specs/infrastructure/: spec.md
openspec/specs/room-control/: spec.md
openspec/specs/room-events/: spec.md
openspec/specs/testing/: spec.md
services/game-service/: .env.example  pyproject.toml
services/game-service/docker/: Dockerfile
services/game-service/src/game_service/: main.py
services/game-service/src/game_service/api/: __init__.py  app.py  deps.py  exception_handlers.py  models.py
services/game-service/src/game_service/api/routers/: __init__.py  cards.py  games.py  meta.py  room_control.py  room_events.py
services/game-service/src/game_service/mcp/: __init__.py  server.py
services/game-service/src/game_service/phoenix_client/: client.py
services/game-service/src/game_service/session/: actions.py  card_db.py  exceptions.py  game_session.py  http_client.py  manager.py
services/game-service/tests/: conftest.py
services/game-service/tests/integration/: test_actions.py  test_api.py  test_e2e.py  test_phoenix_client.py  test_session_manager.py
services/game-service/tests/unit/: test_actions.py  test_api_room_control.py  test_cards_and_session_actions.py  test_load_unload_actions.py  test_mcp_server.py  test_phoenix_client.py  test_session_manager.py
